# shurik

./: .gitlab-ci.yml  Cargo.toml  Config.toml.template
ci/: after_success.sh  before_script.sh  build.sh  run.sh  test.sh  wait_deploy_run.sh
src/: git.rs  gitlab.rs  jenkins.rs  main.rs
